test/classes/errors/nilability-assign/assign-oknil-shared-from-oknil-shared.chpl
//  lhs: shared?  rhs: shared?  ok

class MyClass {  var x: int;  }

var lhs: shared MyClass?;
var rhs: shared MyClass?;

lhs = rhs;


